update images and styling

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.6.18/dist/css/uikit.min.css" />
 
 	<!-- Stylesheets -->
-	<link rel="stylesheet" href="style.css" />
+	<link rel="stylesheet" href="style.css?v=1" />
 
 	<!-- Layout fixes -->
 	<style type="text/css">
@@ -150,6 +150,7 @@
 			            <div class="uk-overlay uk-position-right">
 			            	<div class="bg-yellow banner-text banner-width uk-padding">
 				                <p class="title">COMPLEX IS NEW SIMPLE WITH OUR BUSINESS SUPPORT CENTER</p>
+				                <p>&nbsp;</p>
 				            </div>
 			            </div>
 			        </li>
@@ -166,7 +167,6 @@
 			            <div><img src="images/hm-main-ban.jpg" alt="" class="">
 		            	<div class="bg-yellow banner-text uk-padding">
 				            <p class="title">COMPLEX IS NEW SIMPLE WITH OUR BUSINESS SUPPORT CENTER</p>
-			                <a class="hub-btn uk-inline-block uk-text-uppercase" href="#form" uk-scroll>Get in Touch</a>
 			            </div>
 			            </div>
 			        </li>
@@ -180,14 +180,14 @@
 
 	<section class="uk-section uk-padding-remove-bottom" id="focus">
 		<div class="uk-container uk-padding-remove-top uk-padding-remove-bottom">
-			<div class="uk-padding-large uk-padding-remove-top uk-padding-remove-bottom">
+			<div class="uk-padding-large uk-padding-remove-top uk-padding-remove-bottom small-padding-on-mobile">
 				<h2 class="uk-text-uppercase uk-text-center title-small-text">YOU FOCUS ON CORE WHILE WE SEAMLESSLY MANAGE<br>YOUR COMPLEX BACKEND LOGITICS SERVICES</h2>
-				<p class="uk-margin-remove-bottom">As logistics becomes increasingly digitalized, companies feel pressure to continue focusing on quality service, while leveraging analytics to transform their offering. Today, consumers are looking for an omni-channel experience and they expect on time, reliable and complete delivery of their products and services. DHL can answer business needs by not only providing an offering which helps consistently deliver quality care but also, the tools to continuously improve.</p>
+				<p class="uk-text-center uk-margin-remove-bottom">As logistics becomes increasingly digitalized, companies feel pressure to continue focusing on quality service, while leveraging analytics to transform their offering. Today, consumers are looking for an omni-channel experience and they expect on time, reliable and complete delivery of their products and services. DHL can answer business needs by not only providing an offering which helps consistently deliver quality care but also, the tools to continuously improve.</p>
 			</div>
 	</section>
 
 	<section class="uk-section uk-text-center">
-		<h2 class="uk-text-uppercase">Product Portfolio</h2>
+		<h2 class="uk-text-uppercase small-title-on-moblie">Product Portfolio</h2>
 		<div class="uk-visible@m bg-gray"><img src="images/BSC-infographic.jpg"/></div>
 		<div class="uk-hidden@m bg-gray"><img src="images/BSC-infographic-mobile.jpg"/></div>
 	</section>
@@ -201,49 +201,49 @@
 			<div class="uk-child-width-1-2 uk-child-width-1-4@s uk-grid-small uk-text-center uk-flex-center uk-margin-left uk-margin-right uk-remove-padding-left" uk-grid>
 				<div class="black-text uk-text-center uk-margin-bottom uk-margin-top remove-padding-left">
 					<div>
-						<img src="images/icons-cost-reduction.png">
+						<img src="images/icons-advantages-24x7.png">
 					</div>
 					<p class="uk-text-center uk-padding-small uk-padding-remove-top">365 Days, 24x7 Operations</p>
 				</div>
 				<div class="black-text uk-text-center uk-margin-bottom uk-margin-top remove-padding-left">
 					<div>
-						<img src="images/icons-Global-order-orchestration.png">
+						<img src="images/icons-advantages-SOPs.png">
 					</div>
 					<p class="uk-text-center uk-padding-small uk-padding-remove-top">Standardized SOPs</p>
 				</div>
 				<div class="black-text uk-text-center uk-margin-bottom uk-margin-top remove-padding-left">
 					<div>
-						<img src="images/icons-faster-delivery.png">
+						<img src="images/icons-advantages-robust.png">
 					</div>
 					<p class="uk-text-center uk-padding-small uk-padding-remove-top">Robust transition process</p>
 				</div>
 				<div class="black-text uk-text-center uk-margin-bottom uk-margin-top remove-padding-left">
 					<div>
-						<img src="images/icons-customer-service.png">
+						<img src="images/icons-advantages-training-support.png">
 					</div>
 					<p class="uk-text-center uk-padding-small uk-padding-remove-top">Dedicated Quality & training support</p>
 				</div>
 				<div class="black-text uk-text-center uk-margin-bottom uk-margin-top remove-padding-left">
 					<div>
-						<img src="images/icons-business-flexibility.png">
+						<img src="images/icons-advantages-stateoftheart.png">
 					</div>
 					<p class="uk-text-center uk-padding-small uk-padding-remove-top">State of the art infrastructure</p>
 				</div>
 				<div class="black-text uk-text-center uk-margin-bottom uk-margin-top remove-padding-left">
 					<div>
-						<img src="images/icons-end-to-end.png">
+						<img src="images/icons-advantages-compliance.png">
 					</div>
 					<p class="uk-text-center uk-padding-small uk-padding-remove-top">Compliance with safety norms</p>
 				</div>
 				<div class="black-text uk-text-center uk-margin-bottom uk-margin-top remove-padding-left">
 					<div>
-						<img src="images/icons-optimize.png">
+						<img src="images/icons-advantages-feedback.png">
 					</div>
 					<p class="uk-text-center uk-padding-small uk-padding-remove-top">C-SAT surveys for customer feedback</p>
 				</div>
 				<div class="black-text uk-text-center uk-margin-bottom uk-margin-top remove-padding-left">
 					<div>
-						<img src="images/icons-sales-channel.png">
+						<img src="images/icons-advantages-process.png">
 					</div>
 					<p class="uk-text-center uk-padding-small uk-padding-remove-top">Process driven operations</p>
 				</div>
@@ -368,17 +368,17 @@
 			<div class="uk-hidden@s"><img src="images/img-fulfillment-network-mobile.jpg"/></div>
 			<div class="uk-grid uk-child-width-1-5@s uk-hidden@s bg-yellow-solid uk-container">
 				
-				<div class="uk-width-1-3@s uk-width-1-1@s uk-padding-small">
+				<div class="uk-width-1-3@s uk-width-1-1@s uk-padding-small uk-padding-remove-left">
 			        <ul class="uk-margin-left" uk-accordion="collapsible: false" uk-switcher="connect: .advantage">
 			        	<li class="uk-margin-remove">
-					        <a class="uk-accordion-title uk-padding-small black-text condensed-text uk-text-uppercase uk-padding-remove-bottom padding-on-mobile" href="#" uk-switcher-item="0"><span class="red-text uk-text-bold">01</span> Opportunity identification</a>
+					        <a class="uk-accordion-title uk-padding-small black-text condensed-text uk-text-uppercase uk-padding-remove-bottom" href="#" uk-switcher-item="0"><span class="red-text uk-text-bold">01</span> Opportunity identification</a>
 					        <div class="uk-accordion-content uk-padding-small uk-padding-remove-top">
 								<p class="uk-margin-left">- Evaluate capabilities</br>
 									- Cultural fit</p>
 							</div>
 					    </li>
 					    <li class="uk-margin-remove">
-					        <a class="uk-accordion-title uk-padding-small black-text condensed-text uk-text-uppercase uk-padding-remove-bottom padding-on-mobile" href="#" uk-switcher-item="0"><span class="red-text uk-text-bold">02</span> Solution identification</a>
+					        <a class="uk-accordion-title uk-padding-small black-text condensed-text uk-text-uppercase uk-padding-remove-bottom" href="#" uk-switcher-item="0"><span class="red-text uk-text-bold">02</span> Solution identification</a>
 					        <div class="uk-accordion-content uk-padding-small uk-padding-remove-top">
 								<p class="uk-margin-left">- Process assessment</br>
 								- Migration strategy</p>
@@ -386,7 +386,7 @@
 							</div>
 					    </li>
 					    <li class="uk-margin-remove">
-					        <a class="uk-accordion-title uk-padding-small black-text condensed-text uk-text-uppercase uk-padding-remove-bottom padding-on-mobile" href="#" uk-switcher-item="0"><span class="red-text uk-text-bold">03</span> Process transition</a>
+					        <a class="uk-accordion-title uk-padding-small black-text condensed-text uk-text-uppercase uk-padding-remove-bottom" href="#" uk-switcher-item="0"><span class="red-text uk-text-bold">03</span> Process transition</a>
 					        <div class="uk-accordion-content uk-padding-small uk-padding-remove-top">
 								<p class="uk-margin-left">- Seamless migration</br>
 								- Operating model</p>
@@ -394,7 +394,7 @@
 							</div>
 					    </li>
 					    <li class="uk-margin-remove">
-					        <a class="uk-accordion-title uk-padding-small black-text condensed-text uk-text-uppercase uk-padding-remove-bottom padding-on-mobile" href="#" uk-switcher-item="0"><span class="red-text uk-text-bold">04</span> Service delivery</a>
+					        <a class="uk-accordion-title uk-padding-small black-text condensed-text uk-text-uppercase uk-padding-remove-bottom" href="#" uk-switcher-item="0"><span class="red-text uk-text-bold">04</span> Service delivery</a>
 					        <div class="uk-accordion-content uk-padding-small uk-padding-remove-top">
 								<p class="uk-margin-left">- Monitor results</br>
 								- Continuous Focus</p>
@@ -402,7 +402,7 @@
 							</div>
 					    </li>
 					    <li class="uk-margin-remove">
-					        <a class="uk-accordion-title uk-padding-small black-text condensed-text uk-text-uppercase padding-on-mobile" href="#" uk-switcher-item="0"><span class="red-text uk-text-bold">05</span> Customer Satisfaction</a>
+					        <a class="uk-accordion-title uk-padding-small black-text condensed-text uk-text-uppercase" href="#" uk-switcher-item="0"><span class="red-text uk-text-bold">05</span> Customer Satisfaction</a>
 					        <div class="uk-accordion-content uk-padding-small uk-padding-remove-top">
 								<p class="uk-margin-left">- Customer scorecard</br>
 								- Voice of customer insights</p>
@@ -1095,7 +1095,7 @@
 			            <li class="uk-inline">
 				            <div class="uk-position-small uk-padding black-text uk-text-center">
 				            	<div class="uk-padding-small uk-padding-remove-top">
-				            		<img src="images/icon_fulfillment-center.png"/>
+				            		<img src="images/icons-business.png"/>
 				            	</div>
 				            	<div class="larger-text red-text condensed-text">>10</div>
 				            	<p class="condensed-text tight-description-text">Years experience operating Business Center services</p>
@@ -1104,7 +1104,7 @@
 			            <li class="uk-inline">
 				            <div class="uk-position-small uk-padding black-text uk-text-center">
 				            	<div class="uk-padding-small uk-padding-remove-top">
-				            		<img src="images/icon_ecommerce-marketplace.png"/>
+				            		<img src="images/icons-customer-accounts.png"/>
 				            	</div>
 				            	<div class="larger-text red-text condensed-text">18</div>
 				            	<p class="condensed-text tight-description-text">Customer accounts across all sectors</p>
@@ -1113,16 +1113,16 @@
 				        <li class="uk-inline">
 				            <div class="uk-position-small uk-padding black-text uk-text-center">
 				            	<div class="uk-padding-small uk-padding-remove-top">
-				            		<img src="images/icon_ecommerce.png"/>
+				            		<img src="images/icons-countries.png"/>
 				            	</div>
 				            	<div class="larger-text red-text condensed-text">21</div>
-				            	<p class="condensed-text tight-description-text">Operatiing in 21 countries</p>
+				            	<p class="condensed-text tight-description-text">Operating in 21 countries</p>
 				            </div>
 				        </li>
 				        <li class="uk-inline">
 				            <div class="uk-position-small uk-padding black-text uk-text-center">
 				            	<div class="uk-padding-small uk-padding-remove-top">
-				            		<img src="images/icon_customers-ecommerce.png"/>
+				            		<img src="images/icons-delivery-centres.png"/>
 				            	</div>
 				            	<div class="larger-text red-text condensed-text">3</div>
 				            	<p class="condensed-text tight-description-text">Delivery centres</p>
@@ -1131,7 +1131,7 @@
 				        <li class="uk-inline">
 				            <div class="uk-position-small uk-padding black-text uk-text-center">
 				            	<div class="uk-padding-small uk-padding-remove-top">
-				            		<img src="images/icon_smartphone-brand.png"/>
+				            		<img src="images/icons-prealerts.png"/>
 				            	</div>
 				            	<div class="larger-text red-text condensed-text">4072 K</div>
 				            	<p class="condensed-text tight-description-text">Pre-alerts & BOE, SOP PWK, SB & E-way bills</p>
@@ -1139,7 +1139,7 @@
 				        <li class="uk-inline">
 				            <div class="uk-position-small uk-padding black-text uk-text-center">
 				            	<div class="uk-padding-small uk-padding-remove-top">
-				            		<img src="images/icon_warehouse.png"/>
+				            		<img src="images/icons-employees.png"/>
 				            	</div>
 				            	<div class="larger-text red-text condensed-text">250+</div>
 				            	<p class="condensed-text tight-description-text">Dedicated employees</p>
@@ -1149,8 +1149,8 @@
 			        </div>
 
 			        <div class="uk-dark">
-			            <a class="uk-position-bottom-left uk-position-small" href="#" uk-slidenav-previous uk-slider-item="previous"></a>
-			            <a class="uk-position-bottom-right uk-position-small" href="#" uk-slidenav-next uk-slider-item="next"></a>
+			            <a class="uk-position-center-left uk-position-small" href="#" uk-slidenav-previous uk-slider-item="previous"></a>
+			            <a class="uk-position-center-right uk-position-small" href="#" uk-slidenav-next uk-slider-item="next"></a>
 			        </div>
 
 			        <div class="uk-hidden uk-dark">
@@ -1179,7 +1179,7 @@
 			<img src="images/arrow.png" alt="" style="vertical-align:top">
 		</div>
 
-		<div class="bg-gray uk-padding uk-padding-remove-bottom">
+		<div class="bg-gray uk-padding">
 
 			<div uk-slider="autoplay: true;pause-on-hover: true;sets: true">
 
@@ -1192,7 +1192,7 @@
 						        <div class="bg-gray uk-padding-small remove-padding-on-mobile">
 						        	<div class="uk-child-width-1-2@s" uk-grid uk-grid-small>
 									    <div class="uk-width-1-1">
-									    	<img src="images/st-image.jpg" alt="">
+									    	<img src="images/smart-transport.jpg" alt="">
 									    </div>
 									    <div class="uk-width-1-1 uk-text-left">
 									    	<p><img src="images/dhl-smartransport-logo.png" style="margin:7px 0"></p>
@@ -1207,7 +1207,7 @@
 				            <div class="bg-gray uk-padding-small remove-padding-on-mobile">
 					        	<div class="uk-child-width-1-2" uk-grid uk-grid-small>
 								    <div class="uk-width-1-1">
-								    	<img src="images/st-image.jpg" alt="">
+								    	<img src="images/warehouse.jpg" alt="">
 								    </div>
 								    <div class="uk-width-1-1 uk-text-left">
 								    	<p class="title">Warehousing Solutions</p>
@@ -1221,7 +1221,7 @@
 				            <div class="bg-gray uk-padding-small remove-padding-on-mobile">
 					        	<div class="uk-child-width-1-2" uk-grid uk-grid-small>
 								    <div class="uk-width-1-1">
-								    	<img src="images/st-image.jpg" alt="">
+								    	<img src="images/supply-chain-ifn.jpg" alt="">
 								    </div>
 								    <div class="uk-width-1-1 uk-text-left">
 								    	<p class="title">India Fulfillment Network</p>
