--- a/index (wendy yeo's conflicted copy 2023-08-22).html
+++ b/index (wendy yeo's conflicted copy 2023-08-22).html
@@ -1132,7 +1132,7 @@
 				            		<img src="images/icons-prealerts.png"/>
 				            	</div>
 				            	<div class="larger-text red-text condensed-text">4,000K+</div>
-				            	<p class="condensed-text tight-description-text">Pre-alerts & BOE, SOP<br>PWK, SB & E-way bills</p>
+				            	<p class="condensed-text tight-description-text">Pre-alerts & BOE<br>PWK, SB & E-way bills</p>
 				        </li>
 				        <li class="uk-inline">
 				            <div class="uk-position-small uk-padding black-text uk-text-center">
