update text to Technology Enabled Operations and remove SOP from Icon text

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.6.18/dist/css/uikit.min.css" />
 
 	<!-- Stylesheets -->
-	<link rel="stylesheet" href="style.css?v=1" />
+	<link rel="stylesheet" href="style.css?v=2" />
 
 	<!-- Layout fixes -->
 	<style type="text/css">
@@ -80,7 +80,7 @@
 			background:#EB131E;
 		}
 		.bg-yellow{
-			background: linear-gradient(0deg, rgba(255,255,255,0) 0%, rgba(255,204,0,1) 40%, rgba(255,204,0,1) 100%);
+			background: linear-gradient(0deg, rgba(255,239,177,0) 0%, rgba(255,204,0,1) 60%, rgba(255,204,0,1) 100%);
 		}
 		@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
 			.uk-flex {
@@ -150,10 +150,7 @@
 			            <div class="uk-overlay uk-position-right">
 			            	<div class="bg-yellow banner-text banner-width uk-padding">
 				                <p class="title">COMPLEX IS THE NEW SIMPLE WITH OUR BUSINESS SUPPORT CENTER</p>
-				                <a class="hub-btn uk-inline-block" href="#form" uk-scroll>Connect Now</a>
-				                <p>&nbsp;</p>
-				                <p>&nbsp;</p>
-				                <p>&nbsp;</p>
+				                <a class="hub-btn uk-inline-block" href="#form" uk-scroll>Connect Now</a><p>&nbsp;</p><p>&nbsp;</p>
 				            </div>
 			            </div>
 			        </li>
@@ -168,7 +165,7 @@
 			    <ul class="uk-slider-items uk-child-width-1-1">
 			        <li>
 			            <div><img src="images/hm-main-ban.jpg" alt="" class="">
-		            	<div class="bg-yellow banner-text uk-padding">
+		            	<div class="bg-yellow-solid banner-text uk-padding">
 				            <p class="title">COMPLEX IS THE NEW SIMPLE WITH OUR BUSINESS SUPPORT CENTER</p>
 				            <a class="hub-btn uk-inline-block" href="#form" uk-scroll>Connect Now</a>
 			            </div>
@@ -185,8 +182,13 @@
 	<section class="uk-section uk-padding-remove-bottom" id="focus">
 		<div class="uk-container uk-padding-remove-top uk-padding-remove-bottom">
 			<div class="uk-padding-large uk-padding-remove-top uk-padding-remove-bottom small-padding-on-mobile">
-				<h2 class="uk-text-uppercase uk-text-center title-small-text">WHILE YOU PLAN YOUR NEXT STRATEGIC MOVE, WE SEAMLESSLY MANAGE<br> YOUR COMPLEX BACKEND LOGISTICS</h2>
-				<p class="uk-text-center uk-margin-remove-bottom">As logistics becomes increasingly digitalized, companies feel the pressure to continue focusing on quality service, while leveraging analytics to transform their offering. Today’s consumers are looking for an omni-channel experience and they expect on time, reliable and complete delivery of their products and services. DHL can cater to the business needs by not only providing an offering which helps consistently deliver quality care but also, the tools to continuously improve.</p>
+				<h2 class="uk-text-uppercase uk-text-center title-small-text">WHILE YOU PLAN YOUR NEXT STRATEGIC MOVE, FOCUSING ON YOUR CORE, 
+WE SEAMLESSLY MANAGE YOUR COMPLEX BACKEND LOGISTICS</h2>
+				<p class="uk-text-center uk-margin-remove-bottom">The supply chain of an organization is an interconnected web of functions and activities which encompasses – Strategy, Planning, Sourcing, Manufacturing and Delivering Finished Goods at Customer’s doorstep.<br><br>
+
+This involves multiple stakeholders, present at different locations around the globe and working in tandem for achieving the desired results for the organization. As the organization evolves there is a need to focus on certain areas of supply chain that are core to the organization. At the same time, there are other set of activities and processes that are regular and repetitive working at the backend, which support the core processes. Disruptions to these can lead to improper functioning or even paralyze the supply chain. These backend functions bind the entire supply chain together and ensure its smooth functioning.<br><br>
+
+Business Support Centre by DHL Supply Chain India provides end to end support services that keeps an organization’s supply chain in tune and enables organizations to focus on the core.</p>
 			</div>
 	</section>
 
@@ -207,7 +209,7 @@
 					<div>
 						<img src="images/icons-advantages-24x7.png" class="icon-adv">
 					</div>
-					<p class="uk-text-center uk-padding-small uk-padding-remove-top">365 days<br>24x7 operations</p>
+					<p class="uk-text-center uk-padding-small uk-padding-remove-top">365 Days<br>24x7 Operations</p>
 				</div>
 				<div class="black-text uk-text-center uk-margin-bottom uk-margin-top remove-padding-left">
 					<div>
@@ -219,37 +221,37 @@
 					<div>
 						<img src="images/icons-advantages-robust.png" class="icon-adv">
 					</div>
-					<p class="uk-text-center uk-padding-small uk-padding-remove-top">Robust transition<br>process</p>
+					<p class="uk-text-center uk-padding-small uk-padding-remove-top">Robust Transition<br>Process</p>
 				</div>
 				<div class="black-text uk-text-center uk-margin-bottom uk-margin-top remove-padding-left">
 					<div>
 						<img src="images/icons-advantages-training-support.png" class="icon-adv">
 					</div>
-					<p class="uk-text-center uk-padding-small uk-padding-remove-top">Dedicated quality &<br>training support</p>
+					<p class="uk-text-center uk-padding-small uk-padding-remove-top">Dedicated Quality &<br>Training Support</p>
 				</div>
 				<div class="black-text uk-text-center uk-margin-bottom uk-margin-top remove-padding-left">
 					<div>
 						<img src="images/icons-advantages-stateoftheart.png" class="icon-adv">
 					</div>
-					<p class="uk-text-center uk-padding-small uk-padding-remove-top">State of the art<br>infrastructure</p>
+					<p class="uk-text-center uk-padding-small uk-padding-remove-top">State of the Art<br>Infrastructure</p>
 				</div>
 				<div class="black-text uk-text-center uk-margin-bottom uk-margin-top remove-padding-left">
 					<div>
 						<img src="images/icons-advantages-compliance.png" class="icon-adv">
 					</div>
-					<p class="uk-text-center uk-padding-small uk-padding-remove-top">Compliance with<br>safety norms</p>
+					<p class="uk-text-center uk-padding-small uk-padding-remove-top">Compliance <br>with Norms</p>
 				</div>
 				<div class="black-text uk-text-center uk-margin-bottom uk-margin-top remove-padding-left">
 					<div>
 						<img src="images/icons-advantages-feedback.png" class="icon-adv">
 					</div>
-					<p class="uk-text-center uk-padding-small uk-padding-remove-top">C-SAT surveys for<br>customer feedback</p>
+					<p class="uk-text-center uk-padding-small uk-padding-remove-top">C-SAT Surveys for<br>Customer Feedback</p>
 				</div>
 				<div class="black-text uk-text-center uk-margin-bottom uk-margin-top remove-padding-left">
 					<div>
 						<img src="images/icons-advantages-process.png" class="icon-adv">
 					</div>
-					<p class="uk-text-center uk-padding-small uk-padding-remove-top">Process driven<br>operations</p>
+					<p class="uk-text-center uk-padding-small uk-padding-remove-top">Process Driven<br>Operations</p>
 				</div>
 			</div>
 		</div>
@@ -295,7 +297,7 @@
 							<img src="images/case-studies-technology.jpg" alt="">
 						</div>
 						<div class="uk-card-body uk-flex uk-flex-column uk-height-1-1">
-							<h4 class="black-text uk-margin-remove">Enabling Technology</h4>
+							<h4 class="black-text uk-margin-remove">Technology Enabled Operations</h4>
 						</div>
 					</div>
 				</div>
@@ -305,7 +307,7 @@
 
 	<section class="uk-section uk-padding-remove-bottom">
 		<div class="uk-container">
-			<h2 class="uk-text-uppercase uk-text-center">Rigor at Every Stage</h2>
+			<h2 class="uk-text-uppercase uk-text-center">Our Formula For your Success</h2>
 
         	<div class="uk-grid uk-child-width-1-5@s uk-visible@s uk-background-cover uk-height-large uk-container uk-margin-medium-top h-accordion" style="background-image: url(images/img-fulfillment-network_whtgradient.jpg);">
         		<div class="uk-height-1-1 uk-inline h-accordion-item">
@@ -342,9 +344,9 @@
         		</div>
         		<div class="uk-divider-vertical uk-height-1-1 uk-inline h-accordion-item">
         			<div class="uk-padding-small bottom-third">
-	        			<div class="title black-text condensed-text uk-text-uppercase">Service<br>delivery</div>
+	        			<div class="title black-text condensed-text uk-text-uppercase">Project Delivery & Implementation</div>
 						<p class="uk-margin-left">- Monitor results</br>
-						- Continuous Focus</p>
+						- Continuous focus</p>
 
 	        		</div>
 	        		<div class="expand uk-position-bottom-left uk-padding-small">
@@ -353,7 +355,7 @@
         		</div>
         		<div class="uk-divider-vertical uk-height-1-1 uk-inline h-accordion-item">
         			<div class="uk-padding-small bottom-third">
-	        			<div class="title black-text condensed-text uk-text-uppercase">Customer Satisfaction</div>
+	        			<div class="title black-text condensed-text uk-text-uppercase">Project Optimisation</div>
 						<p class="uk-margin-left">- Customer scorecard</br>
 						- Voice of customer insights</p>
 
@@ -459,7 +461,7 @@
 	<section class="uk-section">
 		<div class="uk-container">
 			<h2 class="uk-text-uppercase uk-text-center">Discover More</h2>
-			<div class="uk-grid uk-child-width-1-1 uk-child-width-1-2@s uk-child-width-1-3@m" uk-height-match="target: > div > .uk-card">
+			<div class="uk-grid uk-child-width-1-1 uk-child-width-1-2@s uk-child-width-1-4@m" uk-height-match="target: > div > .uk-card">
 				<div class="card-wrapper">
 					<div class="uk-card uk-card-small uk-flex uk-flex-column uk-height-1-1 uk-card-default card">
 						<div class="uk-card-media-top">
@@ -470,7 +472,7 @@
 							<h4 class="black-text uk-margin-remove">Contact center setup for a leading multinational IT company</h4>
 						</div>
 						<div class="uk-card-body uk-width-1-2m uk-padding-remove-top">
-							<a class="read-now-btn uk-inline-block" href="Case-study_contact-center-setup.pdf" target="_blank">Read Now</a>
+							<a class="read-now-btn uk-inline-block" href="case-study_contact-center-setup.pdf" target="_blank">Read Now</a>
 						</div>
 					</div>
 				</div>
@@ -488,6 +490,20 @@
 						</div>
 					</div>
 				</div>
+				<div class="card-wrapper">
+					<div class="uk-card uk-card-small uk-flex uk-flex-column uk-height-1-1 uk-card-default card">
+						<div class="uk-card-media-top">
+							<img src="images/case-studies-fmcg.jpg" alt="">
+						</div>
+						<div class="uk-card-body uk-flex uk-flex-column uk-height-1-1">
+							<h4 class="uk-text-uppercase uk-margin-small">Case Study</h4>
+							<h4 class="black-text uk-margin-remove">Order to cash management operations for a leading FMCG company</h4>
+						</div>
+						<div class="uk-card-body uk-width-1-2m uk-padding-remove-top">
+							<a class="read-now-btn uk-inline-block" href="case-study_fmcg.pdf" target="_blank">Read Now</a>
+						</div>
+					</div>
+				</div>				
 				<div class="card-wrapper-last">
 					<div class="uk-card uk-card-small uk-flex uk-flex-column uk-height-1-1 uk-card-default card">
 						<div class="uk-card-media-top">
@@ -498,7 +514,7 @@
 							<h4 class="black-text uk-margin-remove">For understanding Business Support Center offerings better</h4>
 						</div>
 						<div class="uk-card-body uk-width-1-2m uk-padding-remove-top">
-							<a class="read-now-btn uk-inline-block" href="http://app.supplychain.dhl.com/e/er?s=1897772577&lid=11009" target="_blank">Read Now</a>
+							<a class="read-now-btn uk-inline-block" href="case-study_faq.pdf" target="_blank">Read Now</a>
 						</div>
 					</div>
 				</div>			
@@ -1095,8 +1111,8 @@
 				            	<div class="uk-padding-small uk-padding-remove-top">
 				            		<img src="images/icons-business.png"/>
 				            	</div>
-				            	<div class="larger-text red-text condensed-text">>10</div>
-				            	<p class="condensed-text tight-description-text">Years of<br>experience</p>
+				            	<div class="larger-text red-text condensed-text">>12</div>
+				            	<p class="condensed-text tight-description-text">Years of<br>Experience</p>
 				            </div>
 				        </li>
 			            <li class="uk-inline">
@@ -1104,8 +1120,8 @@
 				            	<div class="uk-padding-small uk-padding-remove-top">
 				            		<img src="images/icons-customer-accounts.png"/>
 				            	</div>
-				            	<div class="larger-text red-text condensed-text">15+</div>
-				            	<p class="condensed-text tight-description-text">Customers across<br>multiple sectors</p>
+				            	<div class="larger-text red-text condensed-text">30+</div>
+				            	<p class="condensed-text tight-description-text">Customers across<br>Multiple Sectors</p>
 				            </div>
 				        </li>
 				        <li class="uk-inline">
@@ -1113,8 +1129,8 @@
 				            	<div class="uk-padding-small uk-padding-remove-top">
 				            		<img src="images/icons-countries.png"/>
 				            	</div>
-				            	<div class="larger-text red-text condensed-text">20+</div>
-				            	<p class="condensed-text tight-description-text">Operations across<br> the globe</p>
+				            	<div class="larger-text red-text condensed-text">40+</div>
+				            	<p class="condensed-text tight-description-text">Countries<br> Covered</p>
 				            </div>
 				        </li>
 				        <li class="uk-inline">
@@ -1132,14 +1148,14 @@
 				            		<img src="images/icons-prealerts.png"/>
 				            	</div>
 				            	<div class="larger-text red-text condensed-text">4,000K+</div>
-				            	<p class="condensed-text tight-description-text">Pre-alerts & BOE, SOP<br>PWK, SB & E-way bills</p>
+				            	<p class="condensed-text tight-description-text">Pre-alerts, BOE, Orders,<br> e-Way Bills & Transport Shipments</p>
 				        </li>
 				        <li class="uk-inline">
 				            <div class="uk-position-small uk-padding black-text uk-text-center">
 				            	<div class="uk-padding-small uk-padding-remove-top">
 				            		<img src="images/icons-employees.png"/>
 				            	</div>
-				            	<div class="larger-text red-text condensed-text">250+</div>
+				            	<div class="larger-text red-text condensed-text">350+</div>
 				            	<p class="condensed-text tight-description-text">Dedicated<br>Employees</p>
 				            </div>
 				        </li>
@@ -1222,9 +1238,9 @@
 								    	<img src="images/supply-chain-ifn.jpg" alt="">
 								    </div>
 								    <div class="uk-width-1-1 uk-text-left">
-								    	<p class="title">India Fulfillment Network</p>
+								    	<p class="title">DHL Fulfillment Network</p>
 							        	<p>We have a PAN India network of e-commerce fulfillment centers capable of fulfilling orders for consumers across the country. Consumers from top 80 cities in India can be reached within the next business day.</p>
-							        	<a href="https://www.dhl.com/in-en/home/our-divisions/supply-chain/solutions/warehousing-solutions.html" target="_blank">Learn more</a>
+							        	<a href="https://www.dhl.com/in-en/microsites/supply-chain/fulfillment-network.html" target="_blank">Learn more</a>
 								    </div>
 								</div>
 					        </div>
