add card-wrapper-last to last card to prevent infinte card height on ipad

--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@ Business Support Centre by DHL Supply Chain India provides end to end support se
 						</div>
 					</div>
 				</div>
-				<div class="card-wrapper">
+				<div class="card-wrapper-last">
 					<div class="uk-card uk-card-small uk-flex uk-flex-column uk-height-1-1 uk-card-default card">
 						<div class="uk-card-media-top">
 							<img src="images/case-studies-fmcg.jpg" alt="">
